--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,14 +2,19 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
         <%= form_for(@user) do |f| %>
+        
             <%= f.label :name %>
-            <%= f.text_field :name %>
+            <%= f.text_field :name, class:'form-control'%>
+            
             <%= f.label :email %>
-            <%= f.text_field :email %>
+            <%= f.text_field :email, class:'form-control'%>
+            
             <%= f.label :password %>
-            <%= f.text_field :password %>
-            <%= f.label :password_confirmation,"confirmation" %>
-            <%= f.password_field :password_confirmation %>
+            <%= f.text_field :password , class:'form-control'%>
+            
+            <%= f.label :password_confirmation,"Confirmation" %>
+            <%= f.password_field :password_confirmation , class:'form-control'%>
+            
             <%= f.submit "create my account", class:"btn btn-large btn-primary"%>
         <% end %>
     </div>    
