--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,9 @@
     <%= gravatar_for @user %>
     <%= @user.name %>
 </h1>
+<div class="col-sm-2"></div>
+<div class="col-sm-8"></div>
+<div class="col-sm-2">
+    <%= link_to "edit profile", edit_user_path ,class:"btn btn-primary" %>
+</div>
+    
