--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,31 @@
 <h1>edit profile</h1>
-<p>this is edit profile view</p>
+
+<%= form_for(@user, html:{class:"form-horizontal"}) do |f| %>
+
+    <div class ="form-group">
+        <label class="col-sm-2 control-label">Name：</label>
+        <div class="col-sm-4">
+            <%= f.text_field:name, class:"form-control",placeholder:"名前"%>
+        </div>
+    </div>
+    
+    <div class ="form-group">
+        <label class="col-sm-2 control-label">Mail：</label>
+        <div class="col-sm-4">
+            <%= f.text_field:email, class:"form-control",placeholder:"メールアドレス"%>
+        </div>
+    </div>
+    
+    
+    <div class ="form-group">
+        <label class="col-sm-2 control-label">Password：</label>
+        <div class="col-sm-4">
+            <%= f.text_field:password_digest, class:"form-control",placeholder:"名前"%>
+        </div>
+    </div>
+    
+        <div class="col-sm-2 col-sm-offset-10 actions">
+            <%= f.submit "変更する", class:"btn btn-sm btn-primary"%>
+        </div>
+<% end %>
+    
