--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,15 @@
     <%= gravatar_for @user %>
     <%= @user.name %>
 </h1>
+<div class ="row">
+    <li><%= @user.name %></li>
+    <li><%= @user.email %></li>
+    <li><%= @user.password_digest %></li>
+</div>
 <div class="col-sm-2"></div>
 <div class="col-sm-8"></div>
 <div class="col-sm-2">
-    <%= link_to "edit profile", edit_user_path ,class:"btn btn-primary" %>
+    <%= link_to "edit profile", edit_user_path(@user) ,class:"btn btn-primary" %>
 </div>
-    
+
+
