revise password & add new column country

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,10 @@
     <%= @user.name %>
 </h1>
 <div class ="row">
-    <li><%= @user.name %></li>
-    <li><%= @user.email %></li>
-    <li><%= @user.password_digest %></li>
+    <li>[NAME :]<%= @user.name %></li>
+    <li>[EMAIL :]<%= @user.email %></li>
+    <li>[PASSWORD :]<%= @user.password %></li>
+    <li>[COUNTRY :]<%= @user.country %></li>
 </div>
 <div class="col-sm-2"></div>
 <div class="col-sm-8"></div>
