--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,31 +1,28 @@
 <h1>edit profile</h1>
 
-<%= form_for(@user, html:{class:"form-horizontal"}) do |f| %>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <%= form_for(@user) do |f| %>
+        
+            <%= f.label :name %>
+            <%= f.text_field :name, class:'form-control'%>
+            
+            <%= f.label :email %>
+            <%= f.text_field :email, class:'form-control'%>
+            
+            <%= f.label :password %>
+            <%= f.password_field :password , class:'form-control'%>
+            
+            <%= f.label :password_confirmation,"Confirmation" %>
+            <%= f.password_field :password_confirmation , class:'form-control'%>
+            
+            <%= f.label :password_confirmation,"Confirmation" %>
+            <%= f.country_select :country , class:'form-control'%>
 
-    <div class ="form-group">
-        <label class="col-sm-2 control-label">Name：</label>
-        <div class="col-sm-4">
-            <%= f.text_field:name, class:"form-control",placeholder:"名前"%>
-        </div>
-    </div>
-    
-    <div class ="form-group">
-        <label class="col-sm-2 control-label">Mail：</label>
-        <div class="col-sm-4">
-            <%= f.text_field:email, class:"form-control",placeholder:"メールアドレス"%>
-        </div>
-    </div>
-    
-    
-    <div class ="form-group">
-        <label class="col-sm-2 control-label">Password：</label>
-        <div class="col-sm-4">
-            <%= f.text_field:password_digest, class:"form-control",placeholder:"名前"%>
-        </div>
-    </div>
-    
-        <div class="col-sm-2 col-sm-offset-10 actions">
             <%= f.submit "変更する", class:"btn btn-sm btn-primary"%>
-        </div>
-<% end %>
+        <% end %>
+    </div>
+</div>
+     
+
     
