confirm the accss deny

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,7 @@
     <li>[EMAIL :]<%= @user.email %></li>
     <li>[PASSWORD :]<%= @user.password %></li>
     <li>[COUNTRY :]<%= @user.country %></li>
-    <li><%= current_user %></li>
-    <li><%= User.find_by(id:session[:user_id]) %></li>
+    <li>current_user id  <%= current_user.id %></li>
     <li>@user.id  <%= @user.id%></li>
     <li>session[:user_id]  <%= session[:user_id]%></li>
 </div>
