confirm for 2nd review

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,11 +3,18 @@
     <%= @user.name %>
 </h1>
 <div class ="row">
-    <li>[NAME :]<%= @user.name %></li>
-    <li>[EMAIL :]<%= @user.email %></li>
-    <li>[PASSWORD :]<%= @user.password %></li>
-    <li>[COUNTRY :]<%= @user.country %></li>
-    <li>current_user id  <%= current_user.id %></li>
-    <li>@user.id  <%= @user.id%></li>
-    <li>session[:user_id]  <%= session[:user_id]%></li>
-</div>
+    <div class ="col-sm-2">name</div>
+    <div class ="col-sm-8"><%= @user.name %></div>
+ </div>
+ <div class ="row">
+    <div class ="col-sm-2">email</div>
+    <div class ="col-sm-8"><%= @user.email %></div>
+ </div>
+  <div class ="row">
+    <div class ="col-sm-2">password</div>
+    <div class ="col-sm-8"><%= @user.password %></div>
+ </div> 
+ <div class ="row">
+    <div class ="col-sm-2">country</div>
+    <div class ="col-sm-8"><%= @user.country %></div>
+ </div> 
