--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,42 +3,43 @@
 <div class="row">
 
         <%= form_for(@user, html:{class:"form-horizontal"}) do |f| %>
-        <div class="form-group">
-            <%= f.label :name, class:"col-sm-2 control-label" %>
-            <div class="col-sm-8">
-                <%= f.text_field :name, class:'form-control'%>
+        <%= render 'shared/error_messages', object: f.object %>
+            <div class="form-group">
+                <%= f.label :name, class:"col-sm-2 control-label" %>
+                <div class="col-sm-8">
+                    <%= f.text_field :name, class:'form-control'%>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <%= f.label :email, class:"col-sm-2 control-label"  %>
-            <div class="col-sm-8">
-                <%= f.text_field :email, class:'form-control'%>
+            <div class="form-group">
+                <%= f.label :email, class:"col-sm-2 control-label"  %>
+                <div class="col-sm-8">
+                    <%= f.text_field :email, class:'form-control'%>
+                </div>
             </div>
-        </div>
-        <div class="form-group">    
-            <%= f.label :password,class:"col-sm-2 control-label"  %>
-            <div class="col-sm-8">
-                <%= f.password_field :password , class:'form-control'%>
+            <div class="form-group">    
+                <%= f.label :password,class:"col-sm-2 control-label"  %>
+                <div class="col-sm-8">
+                    <%= f.password_field :password , class:'form-control'%>
+                </div>
             </div>
-        </div>
-        <div class="form-group">    
-            <%= f.label :password_confirmation,class:"col-sm-2 control-label"  %>
-            <div class="col-sm-8">
-                <%= f.password_field :password_confirmation , class:'form-control'%>
+            <div class="form-group">    
+                <%= f.label :password_confirmation,class:"col-sm-2 control-label"  %>
+                <div class="col-sm-8">
+                    <%= f.password_field :password_confirmation , class:'form-control'%>
+                </div>
             </div>
-        </div>
-        <div class="form-group">    
-            <%= f.label :country,class:"col-sm-2 control-label"  %>
-            <div class="col-sm-2">
-                <%= f.country_select :country , class:'form-control'%>
+            <div class="form-group">    
+                <%= f.label :country,class:"col-sm-2 control-label"  %>
+                <div class="col-sm-2">
+                    <%= f.country_select :country , class:'form-control'%>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class = "col-sm-offset-8 col-sm-2">
-                <%= f.submit "変更する", class:"btn btn-sm btn-primary"%>
+            <div class="form-group">
+                <div class = "col-sm-offset-8 col-sm-2">
+                    <%= f.submit "変更する", class:"btn btn-sm btn-primary"%>
+                </div>
             </div>
-        </div>
-            
+                
         <% end %>
 
 </div>
