--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -1,8 +1,19 @@
-    <div>
-        followings
-        <ol>
-        <% @users.each do |user| %>
-            <li><%= user.name %>,<%=user.id %></li>
-        <% end %>
-        </ol>
-    </div>
+<h1>Followings for <%= @user.name %></h1>
+
+
+<table class="table table-hover">
+  <tbody>
+    <tr>
+      <th>ID</th>
+      <th>name</th>
+      <th>e-mail</th>
+    </tr>
+    <% @users.each do |user| %>
+        <tr>
+          <td><%= user.id %></td>
+          <td><%= user.name %></td>
+          <td><%= user.email %></td>
+        </tr>
+    <% end %>
+  </tbody>
+</table>
