--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,5 +1,8 @@
 <% if @feed_items.any? %>
+<%= page_entries_info @feed_items %>
     <ol class = "microposts">
         <%= render @feed_items %>
+        <%= paginate @feed_items %>
+
     </ol>
 <% end %>
