--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -4,9 +4,12 @@
   <span class="content"><%= micropost.content %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+  
     
     <% if current_user == micropost.user %>
       <%= link_to "delete",micropost, method: :delete, data: {confirm: "You Sure?"} %>
     <% end %>
   </span>
+  <span><%= link_to "favorite",favorite_path, method: :create , class: "btn btn-default btn-sm"%></span>
+
 </li>
