--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,6 +7,7 @@
       <section class="micropost_form">
         <%= render 'shared/micropost_form' %>
       </section>
+      <%= link_to "favorite microposts", favorite_microposts_path, class: "btn btn-md btn-primary" %>
     </aside>
     <div class="col-md-8">
 
