show index for favorite and delete button apply

--- a/app/views/favorite_microposts/_favorite_micropost.html.erb
+++ b/app/views/favorite_microposts/_favorite_micropost.html.erb
@@ -1,10 +1,11 @@
-<%= form_for(current_user.favorite_microposts.build, remote: true) do |f| %>
+<%= form_for(current_user.favorite_microposts.build) do |f| %>
   <div>
     <%= hidden_field_tag :micropost_id, micropost.id %>
-    
     <%= hidden_field_tag :user_id, current_user.id %>
     <%= micropost.id %>
     <%= current_user.id %>
+
   </div>
   <%= f.submit "Favorite", class: "btn btn-primary" %>
+  
 <% end %>
